# ollama_prj

./: .gitignore  README.md  generate_index.ipynb  main.ipynb  main.py  pyproject.toml
alza/: alza_test_the_embeddings.ipynb  embeddings_pipeline.ipynb
cz_real_estate/: embeddings_pipeline.ipynb  test_the_embeddings.ipynb
docs/: embeddings_pipeline.md
